// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. should render the default layout 1`] = `
<View>
  <View>
    <View>
      <Image
        aspectRatio={0.6666666666666666}
        uri="https://img.io/img&resize=360"
      />
    </View>
    <View>
      <Text>
        A card
      </Text>
    </View>
  </View>
</View>
`;

exports[`2. should pass an empty state to the image component 1`] = `
<View>
  <View>
    <View>
      <Image
        aspectRatio={0.6666666666666666}
        uri=""
      />
    </View>
    <View>
      <Text>
        A card with an empty image
      </Text>
    </View>
  </View>
</View>
`;

exports[`4. should render without an image when showImage is false 1`] = `
<View>
  <View>
    <View>
      <Text>
        No image
      </Text>
    </View>
  </View>
</View>
`;

exports[`5. should pass an empty state to the image component when uri is null 1`] = `
<View>
  <View>
    <View>
      <Image
        aspectRatio={0.6666666666666666}
        uri=""
      />
    </View>
    <View>
      <Text>
        No URI
      </Text>
    </View>
  </View>
</View>
`;

exports[`6. should render with reversed layout 1`] = `
<View>
  <View>
    <View>
      <Text>
        A card in reverse
      </Text>
    </View>
    <View>
      <Image
        aspectRatio={0.6666666666666666}
        uri="https://img.io/img&resize=360"
      />
    </View>
  </View>
</View>
`;

exports[`7. should render with reversed layout and no image 1`] = `
<View>
  <View>
    <View>
      <Text>
        A card in reverse with no image
      </Text>
    </View>
  </View>
</View>
`;

exports[`8. should render a loading state 1`] = `
<View>
  <View>
    <Image
      aspectRatio={0.6666666666666666}
    />
  </View>
  <View>
    <Gradient
      degrees={264}
    />
    <Gradient
      degrees={267}
    />
    <Gradient
      degrees={267}
    />
    <Gradient
      degrees={267}
    />
  </View>
</View>
`;

exports[`10. should render a loading card with no image 1`] = `
<View>
  <View>
    <Gradient
      degrees={264}
    />
    <Gradient
      degrees={267}
    />
    <Gradient
      degrees={267}
    />
    <Gradient
      degrees={267}
    />
  </View>
</View>
`;

exports[`11. should render a reversed loading component 1`] = `
<View>
  <View>
    <Gradient
      degrees={264}
    />
    <Gradient
      degrees={267}
    />
    <Gradient
      degrees={267}
    />
    <Gradient
      degrees={267}
    />
  </View>
  <View>
    <Image
      aspectRatio={0.6666666666666666}
    />
  </View>
</View>
`;

exports[`12. should render a reversed loading component with no image 1`] = `
<View>
  <View>
    <Gradient
      degrees={264}
    />
    <Gradient
      degrees={267}
    />
    <Gradient
      degrees={267}
    />
    <Gradient
      degrees={267}
    />
  </View>
</View>
`;

exports[`13. should not re-render when imageRatio prop is changed 1`] = `
<FadeIn>
  <View>
    <View>
      <Image
        aspectRatio={0.6666666666666666}
        uri="https://img.io/img&resize=360"
      />
    </View>
    <View>
      <Text>
        Do not re-render me
      </Text>
    </View>
  </View>
</FadeIn>
`;

exports[`13. should not re-render when imageRatio prop is changed 2`] = `
<FadeIn>
  <View>
    <View>
      <Image
        aspectRatio={0.6666666666666666}
        uri="https://img.io/img&resize=360"
      />
    </View>
    <View>
      <Text>
        Do not re-render me
      </Text>
    </View>
  </View>
</FadeIn>
`;

exports[`14. should re-render when image uri changes 1`] = `
<FadeIn>
  <View>
    <View>
      <Image
        aspectRatio={0.6666666666666666}
        uri="https://img.io/img&resize=360"
      />
    </View>
    <View>
      <Text>
        Some text
      </Text>
    </View>
  </View>
</FadeIn>
`;

exports[`14. should re-render when image uri changes 2`] = `
<FadeIn>
  <View>
    <View>
      <Image
        aspectRatio={0.6666666666666666}
        uri="http://foo&resize=360"
      />
    </View>
    <View>
      <Text>
        Some text
      </Text>
    </View>
  </View>
</FadeIn>
`;

exports[`15. should re-render when image size changes 1`] = `
<FadeIn>
  <View>
    <View>
      <Image
        aspectRatio={0.6666666666666666}
        uri="https://img.io/img&resize=360"
      />
    </View>
    <View>
      <Text>
        Some content
      </Text>
    </View>
  </View>
</FadeIn>
`;

exports[`15. should re-render when image size changes 2`] = `
<FadeIn>
  <View>
    <View>
      <Image
        aspectRatio={0.6666666666666666}
        uri="https://img.io/img"
      />
    </View>
    <View>
      <Text>
        Some content
      </Text>
    </View>
  </View>
</FadeIn>
`;

exports[`16. should re-render when loading state changes 1`] = `
<Loading
  imageRatio={0.6666666666666666}
  isReversed={false}
  showImage={true}
/>
`;

exports[`16. should re-render when loading state changes 2`] = `
<FadeIn>
  <View>
    <View>
      <Image
        aspectRatio={0.6666666666666666}
        uri="https://img.io/img&resize=360"
      />
    </View>
    <View>
      <Text>
        Re-render me
      </Text>
    </View>
  </View>
</FadeIn>
`;
